k3s/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy-svc
  namespace: dashy
spec:
  selector:
    app: dashy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
